# evalHub

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
common/: adapter.py  utils.py
config/: lm_eval_sample_config.yaml  lm_eval_test_config.yaml
eval_converters/common/: adapter.py  utils.py
eval_converters/custom/: adapter.py  custom_test.py
eval_converters/helm/: adapter.py  converter.py  utils.py
eval_converters/inspect/: adapter.py  converter.py  utils.py
eval_converters/lm_eval/: adapter.py  converter.py  utils.py
eval_lmeval/: adapter.py  lm_eval_runner.py  utils.py
eval_tools/common/: adapter.py
eval_tools/helm/: adapter.py
helm/: adapter.py  utils.py
inspectai/: eval_schema_inspect_ai.py
inspectai/logs/: 2025-07-03T16-44-30+02-00_pubmedqa_3aa35CEnZnzu7Euu8T3YM4.json
integrations/common/: adapter.py
integrations/helm/: adapter.py  utils.py
metadata/: metadata.json  metadata.py  utils.py
schema/: CHANGELOG.md  README.md  __init__.py  eval.example.json  eval.schema.json  eval_inspect.example.json  eval_types.py  inspect_ai_KB3YEFLdRjAr4kNgdR7ZNa_dataset_bigbio_pubmed_qa_model_openai_azure_gpt-4o-mini.json  inspect_ai_openai_azure_gpt-4o-mini-2024-07-18_bigbio_pubmed_qa_2025-07-03T16:44:30+02:00.json  inspect_ai_openai_azure_gpt-4o-mini_bigbio_pubmed_qa_2025-07-03T16:44:30+02:00.json  leaderboard.schema.json  leaderboard_eval_types.py
tests/: test_helm_adapter.py  test_inspect_adapter.py  test_lm_eval_adapter.py  test_lm_eval_converter.py  test_lm_eval_runner.py
tests/data/helm/: helm_eleutherai_pythia-1b-v0_hellaswag_1751729998.json  helm_openai_gpt2_mmlu_philosophy_1762354922.json  helm_openai_gpt2_narrativeqa_1763479296.json  transform_helm_file_raw_data.json
tests/data/inspect/: inspect_ai_anthropic_claude-sonnet-4-0_allenai_ai2_arc_1761000045.0.json  inspect_ai_anthropic_claude-sonnet-4-0_allenai_ai2_arc_2025-10-21T00:40:45+02:00.json  inspect_ai_ollama_qwen2.5:0.5b_allenai_ai2_arc_1761001924.0.json  inspect_ai_ollama_qwen2.5:0.5b_allenai_ai2_arc_2025-10-21T01:12:04+02:00.json  inspect_ai_openai_azure_gpt-4o-mini-2024-07-18_bigbio_pubmed_qa_1751553870.0.json
tests/data/inspectai/: data.json
